--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,15 +8,16 @@ name: State Tool Generated Workflow
     - master
 jobs:
   build:
-    name: build
     env:
       PLACE: WORLD
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install State Tool
+      run: sh <(curl -q https://platform.activestate.com/dl/cli/install.sh) -n -f
     - name: assert
       run: state run assert
-      shell: bash
     - name: hello
       run: state run hello
-      shell: bash
 
